--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -13,7 +13,7 @@
 <li><a href="../ro/Mouse_navigation.html" class="mw-pt-progress mw-pt-progress--low" title="Navigarea &icirc;n 3 D Modelul de Mouse (2% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="../sv/Mouse_navigation.html" class="mw-pt-progress mw-pt-progress--low" title="Mouse Model (1% translated)" lang="sv" dir="ltr">svenska</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
-<li><a href="../bg/Mouse_navigation.html" class="mw-pt-progress mw-pt-progress--low" title="&#1057;&#1090;&#1080;&#1083; &#1085;&#1072; &#1088;&#1072;&#1073;&#1086;&#1090;&#1072; &#1089; &#1084;&#1080;&#1096;&#1082;&#1072;&#1090;&#1072; (1% translated)" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</a></li>
+<li><a href="../bg/Mouse_navigation.html" class="mw-pt-progress mw-pt-progress--low" title="&#1053;&#1072;&#1074;&#1080;&#1075;&#1072;&#1094;&#1080;&#1103; &#1089; &#1084;&#1080;&#1096;&#1082;&#1072;&#1090;&#1072; (6% translated)" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</a></li>
 <li><a href="../ru/Mouse_navigation.html" class="mw-pt-progress mw-pt-progress--med" title="&#1053;&#1072;&#1074;&#1080;&#1075;&#1072;&#1094;&#1080;&#1103; &#1074; 3D &#1087;&#1088;&#1086;&#1089;&#1090;&#1088;&#1072;&#1085;&#1089;&#1090;&#1074;&#1077; (23% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../uk/Mouse_navigation.html" class="mw-pt-progress mw-pt-progress--low" title="Mouse Model (1% translated)" lang="uk" dir="ltr">&#1091;&#1082;&#1088;&#1072;&#1111;&#1085;&#1089;&#1100;&#1082;&#1072;</a></li>
 <li><a href="../zh/Mouse_navigation.html" class="mw-pt-progress mw-pt-progress--low" title="&#40736;&#26631;&#25511;&#21046;&#27169;&#24335; (3% translated)" lang="zh" dir="ltr">&#20013;&#25991;</a></li>
@@ -728,7 +728,7 @@
 <p>Na za&#345;&iacute;zen&iacute; MacBook s trackpadem funguje navigace pomoc&iacute; gest velmi dob&#345;e, ale gesta maj&iacute; zvl&aacute;&scaron;tn&iacute; v&yacute;znam:
 </p>
 <ul><li>Zoom: p&#345;eta&#382;en&iacute; dv&#283;ma prsty.</li>
-<li>Rotace: p&#345;eta&#382;en&iacute; t&#345;emiprsty.</li>
+<li>Rotace: p&#345;eta&#382;en&iacute; t&#345;emi prsty.</li>
 <li>Posun: <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span> + t&#345;i prsty.</li></ul>
 <p><br>
 </p>
@@ -742,11 +742,11 @@
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=User_hub.png&amp;filetimestamp=20190221145008&amp;.html" class="mw-file-description"><img src="../File/User_hub.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../cs/User_hub.html" title="User hub/cs">User documentation</a>
         <div class="NavContent mw-collapsible-content" style="margin: 10px; border: 1px solid var(--border-color-base, #aaaaaa); text-align: left; border-collapse: collapse; font-weight: normal; font-size: 100%; clear:both; margin-top: 1px; background-color: var(--background-color-neutral-subtle, #fefefe);">
 <ul><li><b><a href="../cs/Getting_started.html" title="Getting started/cs">Getting started</a></b></li>
-<li><b>Installation:</b> <a href="../cs/Download.html" title="Download/cs">Download</a>, <a href="../cs/Installing_on_Windows.html" title="Installing on Windows/cs">Windows</a>, <a href="../cs/Installing_on_Linux.html" title="Installing on Linux/cs">Linux</a>, <a href="../cs/Installing_on_Mac.html" title="Installing on Mac/cs">Mac</a>, <a href="../cs/Installing_additional_components.html" title="Installing additional components/cs">Additional components</a>, <a href="../index.php?title=Compile_on_Docker/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Compile on Docker/cs (page does not exist)">Docker</a>, <a href="../index.php?title=AppImage/cs&amp;action=edit&amp;redlink=1.html" class="new" title="AppImage/cs (page does not exist)">AppImage</a>, <a href="../index.php?title=Ubuntu_Snap/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Ubuntu Snap/cs (page does not exist)">Ubuntu Snap</a></li>
-<li><b>Basics:</b> <a href="../cs/About_FreeCAD.html" title="About FreeCAD/cs">About FreeCAD</a>, <a href="../index.php?title=Interface/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Interface/cs (page does not exist)">Interface</a>, <a class="mw-selflink selflink">Mouse navigation</a>, <a href="../cs/Selection_methods.html" title="Selection methods/cs">Selection methods</a>, <a href="../index.php?title=Object_name/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Object name/cs (page does not exist)">Object name</a>, <a href="../cs/Preferences_Editor.html" title="Preferences Editor/cs">Preferences</a>, <a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>, <a href="../cs/Document_structure.html" title="Document structure/cs">Document structure</a>, <a href="../cs/Property.html" title="Property/cs">Properties</a>, <a href="../cs/Help_FreeCAD.html" title="Help FreeCAD/cs">Help FreeCAD</a>, <a href="../index.php?title=Donate/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Donate/cs (page does not exist)">Donate</a></li></ul>
+<li><b>Installation:</b> <a href="../cs/Download.html" title="Download/cs">Download</a>, <a href="../cs/Installing_on_Windows.html" title="Installing on Windows/cs">Windows</a>, <a href="../cs/Installing_on_Linux.html" title="Installing on Linux/cs">Linux</a>, <a href="../cs/Installing_on_Mac.html" title="Installing on Mac/cs">Mac</a>, <a href="../cs/Installing_additional_components.html" title="Installing additional components/cs">Additional components</a>, <a href="../cs/Compile_on_Docker.html" title="Compile on Docker/cs">Docker</a>, <a href="../index.php?title=AppImage/cs&amp;action=edit&amp;redlink=1.html" class="new" title="AppImage/cs (page does not exist)">AppImage</a>, <a href="../index.php?title=Ubuntu_Snap/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Ubuntu Snap/cs (page does not exist)">Ubuntu Snap</a></li>
+<li><b>Basics:</b> <a href="../cs/About_FreeCAD.html" title="About FreeCAD/cs">About FreeCAD</a>, <a href="../cs/Interface.html" title="Interface/cs">Interface</a>, <a class="mw-selflink selflink">Mouse navigation</a>, <a href="../cs/Selection_methods.html" title="Selection methods/cs">Selection methods</a>, <a href="../index.php?title=Object_name/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Object name/cs (page does not exist)">Object name</a>, <a href="../cs/Preferences_Editor.html" title="Preferences Editor/cs">Preferences</a>, <a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>, <a href="../cs/Document_structure.html" title="Document structure/cs">Document structure</a>, <a href="../cs/Property.html" title="Property/cs">Properties</a>, <a href="../cs/Help_FreeCAD.html" title="Help FreeCAD/cs">Help FreeCAD</a>, <a href="../index.php?title=Donate/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Donate/cs (page does not exist)">Donate</a></li></ul>
 <hr>
 <ul><li><b>Help:</b> <a href="../cs/Tutorials.html" title="Tutorials/cs">Tutorials</a>, <a href="../cs/Video_tutorials.html" title="Video tutorials/cs">Video tutorials</a></li>
-<li><b><a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>:</b> <a href="../index.php?title=Std_Base/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std Base/cs (page does not exist)">Std Base</a>, <a href="../index.php?title=Assembly_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Assembly Workbench/cs (page does not exist)">Assembly</a>, <a href="../index.php?title=BIM_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Workbench/cs (page does not exist)">BIM</a>, <a href="../cs/CAM_Workbench.html" title="CAM Workbench/cs">CAM</a>, <a href="../cs/Draft_Workbench.html" title="Draft Workbench/cs">Draft</a>, <a href="../cs/FEM_Workbench.html" title="FEM Workbench/cs">FEM</a>, <a href="../cs/Inspection_Workbench.html" title="Inspection Workbench/cs">Inspection</a>, <a href="../index.php?title=Material_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Material Workbench/cs (page does not exist)">Material</a>, <a href="../cs/Mesh_Workbench.html" title="Mesh Workbench/cs">Mesh</a>, <a href="../cs/OpenSCAD_Workbench.html" title="OpenSCAD Workbench/cs">OpenSCAD</a>, <a href="../cs/Part_Workbench.html" title="Part Workbench/cs">Part</a>, <a href="../cs/PartDesign_Workbench.html" title="PartDesign Workbench/cs">PartDesign</a>, <a href="../cs/Points_Workbench.html" title="Points Workbench/cs">Points</a>, <a href="../cs/Reverse_Engineering_Workbench.html" title="Reverse Engineering Workbench/cs">Reverse Engineering</a>, <a href="../cs/Robot_Workbench.html" title="Robot Workbench/cs">Robot</a>, <a href="../cs/Sketcher_Workbench.html" title="Sketcher Workbench/cs">Sketcher</a>, <a href="../cs/Spreadsheet_Workbench.html" title="Spreadsheet Workbench/cs">Spreadsheet</a>, <a href="../cs/Surface_Workbench.html" title="Surface Workbench/cs">Surface</a>, <a href="../cs/TechDraw_Workbench.html" title="TechDraw Workbench/cs">TechDraw</a>, <a href="../index.php?title=Testing/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Testing/cs (page does not exist)">Test Framework</a></li></ul>
+<li><b><a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>:</b> <a href="../cs/Std_Base.html" title="Std Base/cs">Std Base</a>, <a href="../index.php?title=Assembly_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Assembly Workbench/cs (page does not exist)">Assembly</a>, <a href="../index.php?title=BIM_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Workbench/cs (page does not exist)">BIM</a>, <a href="../cs/CAM_Workbench.html" title="CAM Workbench/cs">CAM</a>, <a href="../cs/Draft_Workbench.html" title="Draft Workbench/cs">Draft</a>, <a href="../cs/FEM_Workbench.html" title="FEM Workbench/cs">FEM</a>, <a href="../cs/Inspection_Workbench.html" title="Inspection Workbench/cs">Inspection</a>, <a href="../cs/Material_Workbench.html" title="Material Workbench/cs">Material</a>, <a href="../cs/Mesh_Workbench.html" title="Mesh Workbench/cs">Mesh</a>, <a href="../cs/OpenSCAD_Workbench.html" title="OpenSCAD Workbench/cs">OpenSCAD</a>, <a href="../cs/Part_Workbench.html" title="Part Workbench/cs">Part</a>, <a href="../cs/PartDesign_Workbench.html" title="PartDesign Workbench/cs">PartDesign</a>, <a href="../cs/Points_Workbench.html" title="Points Workbench/cs">Points</a>, <a href="../cs/Reverse_Engineering_Workbench.html" title="Reverse Engineering Workbench/cs">Reverse Engineering</a>, <a href="../cs/Robot_Workbench.html" title="Robot Workbench/cs">Robot</a>, <a href="../cs/Sketcher_Workbench.html" title="Sketcher Workbench/cs">Sketcher</a>, <a href="../cs/Spreadsheet_Workbench.html" title="Spreadsheet Workbench/cs">Spreadsheet</a>, <a href="../cs/Surface_Workbench.html" title="Surface Workbench/cs">Surface</a>, <a href="../cs/TechDraw_Workbench.html" title="TechDraw Workbench/cs">TechDraw</a>, <a href="../cs/Testing.html" title="Testing/cs">Test Framework</a></li></ul>
 <hr>
 <ul><li><b><a href="../index.php?title=Addon/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Addon/cs (page does not exist)">Addons</a>:</b> <a href="../index.php?title=Std_AddonMgr/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std AddonMgr/cs (page does not exist)">Addon Manager</a>, <a href="../index.php?title=External_workbenches/cs&amp;action=edit&amp;redlink=1.html" class="new" title="External workbenches/cs (page does not exist)">External workbenches</a>, <a href="../cs/Scripting_and_macros.html" title="Scripting and macros/cs">Scripting and macros</a></li></ul>
 <hr>
@@ -754,35 +754,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111215736
+Cached time: 20260118075847
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.274 seconds
-Real time usage: 0.444 seconds
+CPU time usage: 0.266 seconds
+Real time usage: 0.331 seconds
 Preprocessor visited node count: 1365/1000000
 Post&#8208;expand include size: 64316/2097152 bytes
 Template argument size: 27005/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 3889/5000000 bytes
+Unstrip post&#8208;expand size: 3881/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   66.094      1 -total
- 13.21%    8.733      8 Template:ASCII
-  9.54%    6.302      1 Template:MayaGesture_Navigation
-  8.65%    5.718      1 Template:Userdocnavi/cs
-  7.14%    4.717      1 Template:OpenCascade_Navigation
-  6.78%    4.480      1 Template:OpenSCAD_Navigation
-  5.50%    3.638      1 Template:Gesture_Navigation
-  4.78%    3.162      1 Template:Blender_Navigation
-  4.71%    3.116     55 Template:KEY
-  4.35%    2.876      1 Template:TinkerCAD_Navigation
+100.00%   55.919      1 -total
+ 14.88%    8.320      8 Template:ASCII
+ 14.35%    8.023      1 Template:Userdocnavi/cs
+  7.84%    4.384      1 Template:Navigation_menu_2
+  6.83%    3.820     55 Template:KEY
+  5.03%    2.814      2 Template:Docnav
+  4.76%    2.663      1 Template:OpenSCAD_Navigation
+  4.69%    2.623      2 Template:Button
+  4.69%    2.621      1 Template:CAD_Navigation
+  4.36%    2.440      9 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111215736 and revision id 1736435. Rendering was triggered because: diff-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260118075847 and revision id 1739864. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
