--- a/wiki/cs/Workbenches.html
+++ b/wiki/cs/Workbenches.html
@@ -62,7 +62,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Robot.svg&amp;filetimestamp=20200404173908&amp;.html" class="mw-file-description"><img src="../File/Workbench_Robot.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Robot_Workbench.html" title="Robot Workbench">Pracovn&iacute; plocha Robot</a> pro studium pohyb&#367; robot&#367;. V sou&#269;asn&eacute; dob&#283; nen&iacute; udr&#382;ov&aacute;na. <code>D</code></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Sketcher.svg&amp;filetimestamp=20231231194727&amp;.html" class="mw-file-description"><img src="../File/Workbench_Sketcher.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Pracovn&iacute; plocha Sketcher</a> pro pr&aacute;ci s geometricky v&aacute;zan&yacute;mi n&aacute;&#269;rtky.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Spreadsheet.svg&amp;filetimestamp=20240527155805&amp;.html" class="mw-file-description"><img src="../File/Workbench_Spreadsheet.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Spreadsheet_Workbench.html" title="Spreadsheet Workbench">Pracovn&iacute; plocha Spreadsheet</a> pro vytv&aacute;&#345;en&iacute; a manipulaci s daty v tabulk&aacute;ch.</li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Surface.svg&amp;filetimestamp=20210130230011&amp;.html" class="mw-file-description"><img src="../File/Workbench_Surface.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Surface_Workbench.html" title="Surface Workbench">Surface Workbench</a> provides tools to create and modify surfaces. It is similar to the <a href="../Part_Builder.html" title="Part Builder">Part Builder</a> Face from edges option.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Surface.svg&amp;filetimestamp=20210130230011&amp;.html" class="mw-file-description"><img src="../File/Workbench_Surface.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Surface_Workbench.html" title="Surface Workbench">Pracovn&iacute; plocha Surface</a> poskytuje n&aacute;stroje pro vytv&aacute;&#345;en&iacute; a &uacute;pravy povrch&#367;. Je podobn&yacute; mo&#382;nosti <a href="../Part_Builder.html" title="Part Builder">Part Builder</a> Face from edges (Vytvo&#345;it plochu z hran).</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../TechDraw_Workbench.html" title="TechDraw Workbench">TechDraw Workbench</a> for producing technical drawings from 3D models. It is the successor of the <a href="../Drawing_Workbench.html" title="Drawing Workbench">Drawing Workbench</a>.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Test.svg&amp;filetimestamp=20200404174253&amp;.html" class="mw-file-description"><img src="../File/Workbench_Test.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Testing.html" title="Testing">Test Framework Workbench</a> is for debugging FreeCAD. <code>D</code></li></ul>
 <h3><span class="mw-headline" id="Obsolete">Obsolete</span></h3>
@@ -102,12 +102,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118082912
+Cached time: 20260118083220
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.134 seconds
-Real time usage: 0.403 seconds
+CPU time usage: 0.161 seconds
+Real time usage: 0.389 seconds
 Preprocessor visited node count: 285/1000000
 Post&#8208;expand include size: 7999/2097152 bytes
 Template argument size: 2367/2097152 bytes
@@ -118,18 +118,18 @@ Unstrip post&#8208;expand size: 4412/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.557      1 -total
- 33.66%    8.266      1 Template:Userdocnavi/cs
- 16.97%    4.166      2 Template:Docnav
- 15.31%    3.760      1 Template:Navigation_menu_2
- 10.56%    2.592      5 Template:Incode
-  9.28%    2.278      3 Template:Version
-  8.80%    2.160      2 Template:VersionMinus
-  8.73%    2.145      1 Template:MenuCommand
-  8.63%    2.120      1 Template:Button
+100.00%   29.097      1 -total
+ 29.00%    8.439      1 Template:Userdocnavi/cs
+ 17.93%    5.218      2 Template:Docnav
+ 11.81%    3.436      3 Template:Version
+ 11.35%    3.302      5 Template:Incode
+  9.96%    2.899      1 Template:Navigation_menu_2
+  9.66%    2.811      2 Template:VersionMinus
+  8.53%    2.483      1 Template:Button
+  7.46%    2.170      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260118082911 and revision id 1739894. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260118083219 and revision id 1739896. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
