--- a/wiki/cs/Workbenches.html
+++ b/wiki/cs/Workbenches.html
@@ -64,7 +64,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Spreadsheet.svg&amp;filetimestamp=20240527155805&amp;.html" class="mw-file-description"><img src="../File/Workbench_Spreadsheet.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Spreadsheet_Workbench.html" title="Spreadsheet Workbench">Pracovn&iacute; plocha Spreadsheet</a> pro vytv&aacute;&#345;en&iacute; a manipulaci s daty v tabulk&aacute;ch.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Surface.svg&amp;filetimestamp=20210130230011&amp;.html" class="mw-file-description"><img src="../File/Workbench_Surface.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Surface_Workbench.html" title="Surface Workbench">Pracovn&iacute; plocha Surface</a> poskytuje n&aacute;stroje pro vytv&aacute;&#345;en&iacute; a &uacute;pravy povrch&#367;. Je podobn&yacute; mo&#382;nosti <a href="../Part_Builder.html" title="Part Builder">Part Builder</a> Face from edges (Vytvo&#345;it plochu z hran).</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../TechDraw_Workbench.html" title="TechDraw Workbench">Pracovn&iacute; plocha TechDraw</a> pro vytv&aacute;&#345;en&iacute; technick&yacute;ch v&yacute;kres&#367; z 3D model&#367;. Je n&aacute;stupcem <a href="../Drawing_Workbench.html" title="Drawing Workbench">Pracovn&iacute; plochy Drawing</a>.</li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Test.svg&amp;filetimestamp=20200404174253&amp;.html" class="mw-file-description"><img src="../File/Workbench_Test.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Testing.html" title="Testing">Test Framework Workbench</a> is for debugging FreeCAD. <code>D</code></li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Test.svg&amp;filetimestamp=20200404174253&amp;.html" class="mw-file-description"><img src="../File/Workbench_Test.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../index.php?title=Testov%C3%A1n%C3%AD&amp;action=edit&amp;redlink=1.html" class="new" title="Testov&aacute;n&iacute; (page does not exist)">Pracovn&iacute; plocha Test Framework</a> slou&#382;&iacute; k lad&#283;n&iacute; FreeCADu. <code>D</code></li></ul>
 <h3><span class="mw-headline" id="Obsolete">Obsolete</span></h3>
 <p>The following workbenches are no longer included after version 0.21:
 </p>
@@ -102,12 +102,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118083329
+Cached time: 20260118083541
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.154 seconds
-Real time usage: 0.268 seconds
+CPU time usage: 0.163 seconds
+Real time usage: 0.286 seconds
 Preprocessor visited node count: 285/1000000
 Post&#8208;expand include size: 7999/2097152 bytes
 Template argument size: 2367/2097152 bytes
@@ -118,18 +118,18 @@ Unstrip post&#8208;expand size: 4413/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.187      1 -total
- 34.70%    8.394      1 Template:Userdocnavi/cs
- 15.36%    3.714      1 Template:Navigation_menu_2
- 15.00%    3.627      2 Template:Docnav
- 14.57%    3.524      1 Template:MenuCommand
-  8.77%    2.122      3 Template:Version
-  8.00%    1.934      5 Template:Incode
-  7.10%    1.718      2 Template:VersionMinus
-  6.27%    1.516      1 Template:Button
+100.00%   21.886      1 -total
+ 37.09%    8.117      1 Template:Userdocnavi/cs
+ 16.83%    3.684      1 Template:Navigation_menu_2
+ 12.61%    2.760      2 Template:Docnav
+  9.67%    2.117      5 Template:Incode
+  9.32%    2.039      3 Template:Version
+  9.11%    1.994      1 Template:MenuCommand
+  8.16%    1.785      1 Template:Button
+  7.54%    1.650      2 Template:VersionMinus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260118083329 and revision id 1739898. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260118083541 and revision id 1739900. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
