--- a/wiki/cs/Workbenches.html
+++ b/wiki/cs/Workbenches.html
@@ -65,7 +65,9 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Surface.svg&amp;filetimestamp=20210130230011&amp;.html" class="mw-file-description"><img src="../File/Workbench_Surface.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Surface_Workbench.html" title="Surface Workbench">Pracovn&iacute; plocha Surface</a> poskytuje n&aacute;stroje pro vytv&aacute;&#345;en&iacute; a &uacute;pravy povrch&#367;. Je podobn&yacute; mo&#382;nosti <a href="../Part_Builder.html" title="Part Builder">Part Builder</a> Face from edges (Vytvo&#345;it plochu z hran).</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../TechDraw_Workbench.html" title="TechDraw Workbench">Pracovn&iacute; plocha TechDraw</a> pro vytv&aacute;&#345;en&iacute; technick&yacute;ch v&yacute;kres&#367; z 3D model&#367;. Je n&aacute;stupcem <a href="../Drawing_Workbench.html" title="Drawing Workbench">Pracovn&iacute; plochy Drawing</a>.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Test.svg&amp;filetimestamp=20200404174253&amp;.html" class="mw-file-description"><img src="../File/Workbench_Test.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../index.php?title=Testov%C3%A1n%C3%AD&amp;action=edit&amp;redlink=1.html" class="new" title="Testov&aacute;n&iacute; (page does not exist)">Pracovn&iacute; plocha Test Framework</a> slou&#382;&iacute; k lad&#283;n&iacute; FreeCADu. <code>D</code></li></ul>
-<h3><span class="mw-headline" id="Obsolete">Obsolete</span></h3>
+<p><span id="Obsolete"></span>
+</p>
+<h3><span id="Zastaral.C3.A9"></span><span class="mw-headline" id="Zastaral&eacute;">Zastaral&eacute;</span></h3>
 <p>The following workbenches are no longer included after version 0.21:
 </p>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Start.svg&amp;filetimestamp=20200404174126&amp;.html" class="mw-file-description"><img src="../File/Workbench_Start.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Start_Workbench.html" title="Start Workbench">Start Workbench</a> allows you to quickly jump to one of the most common workbenches. This workbench has been replaced by the Start page that can be accessed via the <a href="../Std_Help_Menu.html" title="Std Help Menu">Help menu</a>.</li></ul>
@@ -102,13 +104,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118083541
+Cached time: 20260118083609
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.163 seconds
-Real time usage: 0.286 seconds
-Preprocessor visited node count: 285/1000000
+CPU time usage: 0.139 seconds
+Real time usage: 0.381 seconds
+Preprocessor visited node count: 286/1000000
 Post&#8208;expand include size: 7999/2097152 bytes
 Template argument size: 2367/2097152 bytes
 Highest expansion depth: 5/100
@@ -118,18 +120,18 @@ Unstrip post&#8208;expand size: 4413/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.886      1 -total
- 37.09%    8.117      1 Template:Userdocnavi/cs
- 16.83%    3.684      1 Template:Navigation_menu_2
- 12.61%    2.760      2 Template:Docnav
-  9.67%    2.117      5 Template:Incode
-  9.32%    2.039      3 Template:Version
-  9.11%    1.994      1 Template:MenuCommand
-  8.16%    1.785      1 Template:Button
-  7.54%    1.650      2 Template:VersionMinus
+100.00%   58.218      1 -total
+ 46.72%   27.199      1 Template:Userdocnavi/cs
+ 26.82%   15.614      1 Template:Navigation_menu_2
+ 16.26%    9.469      2 Template:Docnav
+ 13.11%    7.631      2 Template:VersionMinus
+  6.23%    3.629      5 Template:Incode
+  6.05%    3.524      3 Template:Version
+  5.26%    3.065      1 Template:MenuCommand
+  4.71%    2.743      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260118083541 and revision id 1739900. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260118083608 and revision id 1739902. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
