--- a/wiki/cs/Workbenches.html
+++ b/wiki/cs/Workbenches.html
@@ -68,7 +68,7 @@
 <p><span id="Obsolete"></span>
 </p>
 <h3><span id="Zastaral.C3.A9"></span><span class="mw-headline" id="Zastaral&eacute;">Zastaral&eacute;</span></h3>
-<p>The following workbenches are no longer included after version 0.21:
+<p>N&aacute;sleduj&iacute;c&iacute; pracovn&iacute; plochy ji&#382; nejsou po verzi 0.21 zahrnuty:
 </p>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Start.svg&amp;filetimestamp=20200404174126&amp;.html" class="mw-file-description"><img src="../File/Workbench_Start.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Start_Workbench.html" title="Start Workbench">Start Workbench</a> allows you to quickly jump to one of the most common workbenches. This workbench has been replaced by the Start page that can be accessed via the <a href="../Std_Help_Menu.html" title="Std Help Menu">Help menu</a>.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Web.svg&amp;filetimestamp=20200404174327&amp;.html" class="mw-file-description"><img src="../File/Workbench_Web.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Web_Workbench.html" title="Web Workbench">Web Workbench</a> provides you with a browser window instead of the <a href="../3D_view.html" class="mw-redirect" title="3D view">3D view</a> within FreeCAD.</li></ul>
@@ -104,12 +104,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118083609
+Cached time: 20260118083645
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.139 seconds
-Real time usage: 0.381 seconds
+CPU time usage: 0.137 seconds
+Real time usage: 0.341 seconds
 Preprocessor visited node count: 286/1000000
 Post&#8208;expand include size: 7999/2097152 bytes
 Template argument size: 2367/2097152 bytes
@@ -120,18 +120,18 @@ Unstrip post&#8208;expand size: 4413/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   58.218      1 -total
- 46.72%   27.199      1 Template:Userdocnavi/cs
- 26.82%   15.614      1 Template:Navigation_menu_2
- 16.26%    9.469      2 Template:Docnav
- 13.11%    7.631      2 Template:VersionMinus
-  6.23%    3.629      5 Template:Incode
-  6.05%    3.524      3 Template:Version
-  5.26%    3.065      1 Template:MenuCommand
-  4.71%    2.743      1 Template:Button
+100.00%   38.563      1 -total
+ 44.58%   17.193      1 Template:Userdocnavi/cs
+ 13.68%    5.275      2 Template:Docnav
+ 12.91%    4.978      5 Template:Incode
+ 11.36%    4.381      1 Template:Navigation_menu_2
+ 10.00%    3.855      2 Template:VersionMinus
+  5.78%    2.230      3 Template:Version
+  5.38%    2.074      1 Template:MenuCommand
+  4.10%    1.582      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260118083608 and revision id 1739902. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260118083644 and revision id 1739904. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
